--- a/manifest.json
+++ b/manifest.json
@@ -7,13 +7,13 @@
     "theme_color": "#4CAF50",
     "icons": [
         {
-            "src": "assets/Logo.png",
-            "sizes": "192x192",
+            "src": "assets/Logo-160-192.png",
+            "sizes": "160x192",
             "type": "image/png"
         },
         {
-            "src": "assets/Logo.png",
-            "sizes": "512x512",
+            "src": "assets/Logo-427-512.png",
+            "sizes": "427x512",
             "type": "image/png"
         }
     ]
