--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
     "theme_color": "#4CAF50",
     "icons": [
         {
-            "src": "assets/Logo-160-192.png",
+            "src": "assets/Logo-160-192.jpg",
             "sizes": "160x192",
             "type": "image/png"
         },
         {
-            "src": "assets/Logo-427-512.png",
+            "src": "assets/Logo-427-512.jpg",
             "sizes": "427x512",
             "type": "image/png"
         }
