--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
     "name": "Encriptador/Desencriptador",
     "short_name": "Encriptador",
-    "start_url": "./index.html",
+    "start_url": "/challenge_encriptador_oracle/",
     "display": "standalone",
     "background_color": "#ffffff",
-    "theme_color": "#4CAF50",
+    "theme_color": "#051fa3",
     "icons": [
         {
             "src": "assets/icon-512-512.png",
@@ -15,13 +15,18 @@
             "src": "assets/icon-128-128.png",
             "sizes": "128x128",
             "type": "image/png"
+        },
+        {
+            "src": "assets/icon-192-192.png",
+            "sizes": "192x192",
+            "type": "image/png"
         }
     ],
     "screenshots": [
     {
         "src": "assets/imagen__1.jpg",
         "sizes": "2000x2000",
-        "type": "image/png",
+        "type": "image/jpg",
         "form_factor": "narrow" 
     }
 ]
